--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
   "require": {
     "php": ">=5.5.9",
     "mindy/template": "~3.0",
+    "mindy/finder": "~3.0",
     "symfony/dependency-injection": "~3.0",
     "symfony/config": "~3.0",
     "symfony/http-kernel": "~3.0",
@@ -33,5 +34,10 @@
       "/Tests/"
     ]
   },
-  "minimum-stability": "dev"
+  "minimum-stability": "dev",
+  "extra": {
+    "branch-alias": {
+      "dev-master": "3.6-dev"
+    }
+  }
 }
