--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "symfony/expression-language": "~3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.3.4"
+        "phpunit/phpunit": "~4.0"
     },
     "autoload": {
         "psr-4": {
