--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ sudo: false
 language: php
 
 php:
-    - 5.5
     - 5.6
     - 7.0
     - 7.1
@@ -16,7 +15,7 @@ cache:
 
 before_install:
     - composer self-update
-    - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then wget http://cs.sensiolabs.org/download/php-cs-fixer-v2.phar -O php-cs-fixer; fi
+    - wget http://cs.sensiolabs.org/download/php-cs-fixer-v2.phar -O php-cs-fixer
 
 install: travis_retry composer install --no-interaction --prefer-source
 
