--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,13 @@ before_install:
 
 install: travis_retry composer install --no-interaction --prefer-source
 
+addons:
+    code_climate:
+        repo_token: $CODECLIMATE_TOKEN
+
 script:
     - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ./php-cs-fixer fix --config=.php_cs --using-cache=no --verbose --diff --dry-run; fi
     - vendor/bin/phpunit
+
+after_success:
+  - vendor/bin/test-reporter
