--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ addons:
         repo_token: $CODECLIMATE_TOKEN
 
 script:
-    - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ./php-cs-fixer fix --config=.php_cs --using-cache=no --verbose --diff --dry-run; fi
-    - vendor/bin/phpunit
+    - php ./php-cs-fixer fix --config=.php_cs --using-cache=no --verbose --diff --dry-run
+    - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
 after_success:
   - vendor/bin/test-reporter
