--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=5.6",
         "mindy/template": "~3.0",
         "mindy/finder": "~3.0",
         "symfony/dependency-injection": "~3.0",
@@ -24,7 +24,8 @@
         "symfony/expression-language": "~3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.0"
+        "phpunit/phpunit": "~5.0",
+        "codeclimate/php-test-reporter": "~0.4"
     },
     "autoload": {
         "psr-4": {
