--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,12 @@
         "template",
         "templating"
     ],
-    "homepage": "https://mindy-cms.com",
+    "config": {
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    },
     "license": "MIT",
     "authors": [
         {
@@ -15,17 +20,17 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
-        "mindy/template": "~3.0",
-        "mindy/finder": "~3.0",
-        "symfony/dependency-injection": "~3.0",
-        "symfony/config": "~3.0",
-        "symfony/http-kernel": "~3.0",
-        "symfony/expression-language": "~3.0"
+        "php": ">=7.0",
+        "mindy/template": "~3.0 || ~4.0",
+        "mindy/finder": "~3.0 || ~4.0",
+        "symfony/dependency-injection": "~3.0 || ~4.0",
+        "symfony/config": "~3.0 || ~4.0",
+        "symfony/http-kernel": "~3.0 || ~4.0",
+        "symfony/expression-language": "~3.0 || ~4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.0",
-        "codeclimate/php-test-reporter": "~0.4"
+        "phpunit/phpunit": "^6.5",
+        "symfony/security-bundle": "^3.4"
     },
     "autoload": {
         "psr-4": {
@@ -35,10 +40,9 @@
             "/Tests/"
         ]
     },
-    "minimum-stability": "dev",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "3.6.8-dev"
+    "autoload-dev": {
+        "psr-4": {
+            "Mindy\\Bundle\\TemplateBundle\\Tests\\": ""
         }
     }
 }
