--- a/composer.json
+++ b/composer.json
@@ -21,16 +21,18 @@
     ],
     "require": {
         "php": ">=7.0",
-        "mindy/template": "~3.0 || ~4.0",
-        "mindy/finder": "~3.0 || ~4.0",
-        "symfony/dependency-injection": "~3.0 || ~4.0",
+        "mindy/template": "~4.0",
         "symfony/config": "~3.0 || ~4.0",
-        "symfony/http-kernel": "~3.0 || ~4.0",
-        "symfony/expression-language": "~3.0 || ~4.0"
+        "symfony/dependency-injection": "~3.0 || ~4.0",
+        "symfony/expression-language": "~3.0 || ~4.0",
+        "symfony/yaml": "~3.0 || ~4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
-        "symfony/security-bundle": "^3.4"
+        "symfony/framework-bundle": "~3.0 || ~4.0",
+        "symfony/http-kernel": "~3.0 || ~4.0",
+        "symfony/security-bundle": "~3.0 || ~4.0",
+        "symfony/var-dumper": "~3.0 || ~4.0"
     },
     "autoload": {
         "psr-4": {
