--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
-        "symfony/framework-bundle": "~3.0 || ~4.0",
+        "symfony/framework-bundle": "~3.0|~4.0",
         "symfony/http-kernel": "~3.0 || ~4.0",
         "symfony/security-bundle": "~3.0 || ~4.0",
         "symfony/var-dumper": "~3.0 || ~4.0"
