--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,6 @@
         "template",
         "templating"
     ],
-    "config": {
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true
-    },
     "license": "MIT",
     "authors": [
         {
@@ -20,19 +14,19 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
+        "php": "^7.0",
         "mindy/template": "~4.0",
-        "symfony/config": "~4.0",
-        "symfony/dependency-injection": "~4.0",
-        "symfony/expression-language": "~4.0",
-        "symfony/yaml": "~4.0"
+        "symfony/config": "~3.0|~4.0",
+        "symfony/dependency-injection": "~3.0|~4.0",
+        "symfony/expression-language": "~3.0|~4.0",
+        "symfony/yaml": "~3.0|~4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
-        "symfony/framework-bundle": "~4.0",
-        "symfony/http-kernel": "~4.0",
-        "symfony/security-bundle": "~4.0",
-        "symfony/var-dumper": "~4.0"
+        "symfony/framework-bundle": "~3.0|~4.0",
+        "symfony/http-kernel": "~3.0|~4.0",
+        "symfony/security-bundle": "~3.0|~4.0",
+        "symfony/var-dumper": "~3.0|~4.0"
     },
     "autoload": {
         "psr-4": {
